tests/snapshots/snapshots__fixture_humanize_level4.snap
---
source: tests/snapshots.rs
expression: output
---
__init__.py
    28→__all__ = [
filesize.py
    36→def naturalsize(
    37→    value: float | str,
    38→    binary: bool = False,
    39→    gnu: bool = False,
    40→    format: str = "%.1f",
    41→) -> str:
    42→    """Format a number of bytes like a human-readable filesize (e.g. 10 kB).
i18n.py
     8→TYPE_CHECKING = False
    13→__all__ = ["activate", "deactivate", "decimal_separator", "thousands_separator"]
    15→_TRANSLATIONS: dict[str | None, gettext_module.NullTranslations] = {
    18→_CURRENT = local()
    22→_THOUSANDS_SEPARATOR = {
    31→_DECIMAL_SEPARATOR = {
    40→def _get_default_locale_path() -> pathlib.Path | None:
    51→def get_translation() -> gettext_module.NullTranslations:
    58→def activate(
    59→    locale: str | None, path: str | os.PathLike[str] | None = None
    60→) -> gettext_module.NullTranslations:
    61→    """Activate internationalisation.
    96→def deactivate() -> None:
    97→    """Deactivate internationalisation."""
   101→def _gettext(message: str) -> str:
   113→def _pgettext(msgctxt: str, message: str) -> str:
   129→def _ngettext(message: str, plural: str, num: int) -> str:
   144→def _gettext_noop(message: str) -> str:
   163→def _ngettext_noop(singular: str, plural: str) -> tuple[str, str]:
   183→def thousands_separator() -> str:
   184→    """Return the thousands separator for a locale, default to comma.
   196→def decimal_separator() -> str:
   197→    """Return the decimal separator for a locale, default to dot.
lists.py
     5→TYPE_CHECKING = False
     9→__all__ = ["natural_list"]
    12→def natural_list(items: list[Any]) -> str:
    13→    """Natural list.
number.py
    12→TYPE_CHECKING = False
    21→def _format_not_finite(value: float) -> str:
    34→def ordinal(value: NumberOrString, gender: str = "male") -> str:
    35→    """Converts an integer to its ordinal as a string.
   110→def intcomma(value: NumberOrString, ndigits: int | None = None) -> str:
   111→    """Converts an integer to a string containing commas every three digits.
   195→def intword(value: NumberOrString, format: str = "%.1f") -> str:
   196→    """Converts a large integer to a friendly text representation.
   269→def apnumber(value: NumberOrString) -> str:
   270→    """Converts an integer to Associated Press style.
   321→def fractional(value: NumberOrString) -> str:
   322→    """Convert to fractional number.
   385→def scientific(value: NumberOrString, precision: int = 2) -> str:
   386→    """Return number in string scientific notation z.wq x 10ⁿ.
   454→def clamp(
   455→    value: float,
   456→    format: str = "{:}",
   457→    floor: float | None = None,
   458→    ceil: float | None = None,
   459→    floor_token: str = "<",
   460→    ceil_token: str = ">",
   461→) -> str:
   462→    """Returns number with the specified format, clamped between floor and ceil.
   531→def metric(value: float, unit: str = "", precision: int = 3) -> str:
   532→    """Return a value with a metric SI unit-prefix appended.
time.py
    15→TYPE_CHECKING = False
    21→__all__ = [
    30→@total_ordering
    31→class Unit(Enum):
    41→    def __lt__(self, other: Any) -> Any:
    47→def _now() -> dt.datetime:
    53→def _abs_timedelta(delta: dt.timedelta) -> dt.timedelta:
    68→def _date_and_delta(
    69→    value: Any, *, now: dt.datetime | None = None, precise: bool = False
    70→) -> tuple[Any, Any]:
    95→def naturaldelta(
    96→    value: dt.timedelta | float,
    97→    months: bool = True,
    98→    minimum_unit: str = "seconds",
    99→) -> str:
   100→    """Return a natural representation of a timedelta or number of seconds.
   249→def naturaltime(
   250→    value: dt.datetime | dt.timedelta | float,
   251→    future: bool = False,
   252→    months: bool = True,
   253→    minimum_unit: str = "seconds",
   254→    when: dt.datetime | None = None,
   255→) -> str:
   256→    """Return a natural representation of a time in a resolution that makes sense.
   300→def _convert_aware_datetime(
   301→    value: dt.datetime | dt.timedelta | float | None,
   302→) -> Any:
   311→def naturalday(value: dt.date | dt.datetime, format: str = "%b %d") -> str:
   312→    """Return a natural day.
   343→def naturaldate(value: dt.date | dt.datetime) -> str:
   344→    """Like `naturalday`, but append a year for dates more than ~five months away."""
   361→def _quotient_and_remainder(
   362→    value: float,
   363→    divisor: float,
   364→    unit: Unit,
   365→    minimum_unit: Unit,
   366→    suppress: Iterable[Unit],
   367→    format: str,
   368→) -> tuple[float, float]:
   406→def _suitable_minimum_unit(min_unit: Unit, suppress: Iterable[Unit]) -> Unit:
   435→def _suppress_lower_units(min_unit: Unit, suppress: Iterable[Unit]) -> set[Unit]:
   451→def precisedelta(
   452→    value: dt.timedelta | float | None,
   453→    minimum_unit: str = "seconds",
   454→    suppress: Iterable[str] = (),
   455→    format: str = "%0.2f",
   456→) -> str:
   457→    """Return a precise representation of a timedelta or number of seconds.
   654→def _rounding_by_fmt(format: str, value: float) -> float | int:
