tests/snapshots/snapshots__fixture_humanize_root_level2.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
     1→# humanize
    49→## API reference
    55→## Installation
    57→### From PyPI
    63→### From source
    71→## Usage
    73→### Integer humanization
    89→### Date & time humanization
   110→### Precise time delta
   124→#### Smaller units
   154→### File size humanization
   166→### Human-readable floating point numbers
   182→### Scientific notation
   200→## Localization
RELEASING.md
     1→# Release checklist
docs/filesize.md
     1→# Filesize
docs/i18n.md
     1→# Internationalisation
docs/index.md
     1→# humanize
docs/lists.md
     1→# Lists
docs/number.md
     1→# Number
docs/time.md
     1→# Time
src/humanize/__init__.py
    28→__all__
src/humanize/filesize.py
    36→def naturalsize
src/humanize/i18n.py
     8→TYPE_CHECKING
    13→__all__
    15→_TRANSLATIONS
    18→_CURRENT
    22→_THOUSANDS_SEPARATOR
    31→_DECIMAL_SEPARATOR
    40→def _get_default_locale_path
    51→def get_translation
    58→def activate
    96→def deactivate
   101→def _gettext
   113→def _pgettext
   129→def _ngettext
   144→def _gettext_noop
   163→def _ngettext_noop
   183→def thousands_separator
   196→def decimal_separator
src/humanize/lists.py
     5→TYPE_CHECKING
     9→__all__
    12→def natural_list
src/humanize/number.py
    12→TYPE_CHECKING
    21→def _format_not_finite
    34→def ordinal
   110→def intcomma
   195→def intword
   269→def apnumber
   321→def fractional
   385→def scientific
   454→def clamp
   531→def metric
src/humanize/time.py
    15→TYPE_CHECKING
    21→__all__
    31→class Unit
    41→    def __lt__
    47→def _now
    53→def _abs_timedelta
    68→def _date_and_delta
    95→def naturaldelta
   249→def naturaltime
   300→def _convert_aware_datetime
   311→def naturalday
   343→def naturaldate
   361→def _quotient_and_remainder
   406→def _suitable_minimum_unit
   435→def _suppress_lower_units
   451→def precisedelta
   654→def _rounding_by_fmt
