tests/snapshots/snapshots__fixture_ini.snap
---
source: tests/snapshots.rs
expression: output
---
ini.js
     3→const encode
    80→function splitSections
   106→const decode
   212→const isQuoted
   217→const safe
   230→const unsafe
