tests/snapshots/snapshots__fixture_ini_level2.snap
---
source: tests/snapshots.rs
expression: output
---
ini.js
     3→const encode = (obj, opt = {}) => {
    80→function splitSections (str, separator) {
   106→const decode = (str, opt = {}) => {
   212→const isQuoted = val => {
   217→const safe = val => {
   230→const unsafe = val => {
