tests/snapshots/snapshots__fixture_ini_root_level2.snap
---
source: tests/snapshots.rs
expression: output
---
.commitlintrc.js
.eslintrc.js
     7→const localConfigs = readdir(__dirname)
CHANGELOG.md
     1→# Changelog
     3→## [6.0.0](https://github.com/npm/ini/compare/v5.0.0...v6.0.0) (2025-10-22)
     4→### ⚠️ BREAKING CHANGES
     6→### Bug Fixes
     8→### Chores
    11→## [5.0.0](https://github.com/npm/ini/compare/v4.1.3...v5.0.0) (2024-09-03)
    12→### ⚠️ BREAKING CHANGES
    14→### Bug Fixes
    16→### Chores
    22→## [4.1.3](https://github.com/npm/ini/compare/v4.1.2...v4.1.3) (2024-05-22)
    24→### Bug Fixes
    28→### Chores
    34→## [4.1.2](https://github.com/npm/ini/compare/v4.1.1...v4.1.2) (2024-03-04)
    36→### Bug Fixes
    40→### Documentation
    46→### Chores
    63→## [4.1.1](https://github.com/npm/ini/compare/v4.1.0...v4.1.1) (2023-05-16)
    65→### Bug Fixes
    69→## [4.1.0](https://github.com/npm/ini/compare/v4.0.0...v4.1.0) (2023-04-13)
    71→### Features
    78→### Bug Fixes
    84→## [4.0.0](https://github.com/npm/ini/compare/v3.0.1...v4.0.0) (2023-03-08)
    86→### ⚠️ BREAKING CHANGES
    90→### Features
    94→## [3.0.1](https://github.com/npm/ini/compare/v3.0.0...v3.0.1) (2022-08-22)
    97→### Bug Fixes
   101→## [3.0.0](https://github.com/npm/ini/compare/v2.0.1...v3.0.0) (2022-04-05)
   104→### ⚠ BREAKING CHANGES
   108→### Bug Fixes
   113→### Dependencies
CODE_OF_CONDUCT.md
CONTRIBUTING.md
     3→# Contributing
     5→## Code of Conduct
     9→## Reporting Bugs
    17→## Pull Request Conventions
    19→### Commits
    30→### Test Coverage
    36→### Linting
    42→## What _not_ to contribute?
    44→### Dependencies
    48→### Tools/Automation
README.md
     4→## Note
    10→## Usage
    82→## API
    84→### Parse
    93→### Stringify
   167→### Un / Escape
SECURITY.md
lib/ini.js
     3→const encode = (obj, opt = {}) => {
    80→function splitSections (str, separator) {
   106→const decode = (str, opt = {}) => {
   212→const isQuoted = val => {
   217→const safe = val => {
   230→const unsafe = val => {
