tests/snapshots/snapshots__fixture_input_otp.snap
---
source: tests/snapshots.rs
expression: output
---
input.tsx:
  export const OTPInputContext :10
  export const OTPInput :14
  function safeInsertRule :540
  const NOSCRIPT_CSS_FALLBACK :553
regexp.ts:
  export const REGEXP_ONLY_DIGITS :1
  export const REGEXP_ONLY_CHARS :2
  export const REGEXP_ONLY_DIGITS_AND_CHARS :3
sync-timeouts.ts:
  export function syncTimeouts :1
types.ts:
  export interface SlotProps :1
  export interface RenderProps :7
  type OverrideProps :12
  type OTPInputBaseProps :13
  type InputOTPRenderFn :32
  export type OTPInputProps :33
use-previous.ts:
  export function usePrevious :3
use-pwm-badge.tsx:
  const PWM_BADGE_MARGIN_RIGHT :4
  const PWM_BADGE_SPACE_WIDTH_PX :5
  const PWM_BADGE_SPACE_WIDTH :6
  const PASSWORD_MANAGERS_SELECTORS :8
  export function usePasswordManagerBadge :15
