tests/snapshots/snapshots__fixture_ky.snap
---
source: tests/snapshots.rs
expression: output
---
core/Ky.ts:
  export class Ky :33
  static create :34
  static #normalizeSearchParams :178
  constructor :200
  #calculateDelay :297
  async #calculateRetryDelay :316
  #decorateResponse :390
  #cancelBody :398
  #cancelResponseBody :407
  async #retry :412
  async #fetch :463
  #getNormalizedOptions :503
  #assignRequest :512
  #wrapRequestWithUploadProgress :517
core/constants.ts:
  export const supportsRequestStreams :4
  export const supportsAbortController :34
  export const supportsAbortSignal :35
  export const supportsResponseStreams :36
  export const supportsFormData :37
  export const requestMethods :39
  const validate :41
  export const responseTypes :46
  export const maxSafeTimeout :58
  export const usualFormBoundarySize :61
  export const stop :63
  export type ForceRetryOptions :68
  export class RetryMarker :148
  constructor :149
  export const retry :235
  export const kyOptionKeys :237
  export const vendorSpecificOptions :256
  export const requestOptionsRegistry :265
errors/ForceRetryError.ts:
  export class ForceRetryError :8
  constructor :14
errors/HTTPError.ts:
  export class HTTPError :5
  constructor :10
errors/NonError.ts:
  export class NonError :6
  constructor :10
errors/TimeoutError.ts:
  export class TimeoutError :3
  constructor :6
index.ts:
  const createInstance :10
  const ky :34
types/ResponsePromise.ts:
  export type ResponsePromise :6
types/common.ts:
  export type Primitive :2
  export type Required :4
  export type LiteralUnion :6
types/hooks.ts:
  export type BeforeRequestState :5
  export type BeforeRequestHook :14
  export type BeforeRetryState :20
  export type BeforeRetryHook :30
  export type AfterResponseState :32
  export type AfterResponseHook :41
  export type BeforeErrorState :48
  export type BeforeErrorHook :57
  export type Hooks :59
types/ky.ts:
  export type KyInstance :5
types/options.ts:
  export type SearchParamsInit :6
  export type SearchParamsOption :9
  export type RequestHttpMethod :11
  export type HttpMethod :12
  export type Input :14
  export type Progress :16
  export type KyHeadersInit :27
  export type KyOptions :33
  export type KyOptionsRegistry :307
  export interface Options :312
  export type InternalOptions :358
  export interface NormalizedOptions :373
types/request.ts:
  export type KyRequest :1
types/response.ts:
  export type KyResponse :1
types/retry.ts:
  export type ShouldRetryState :3
  export type RetryOptions :15
utils/body.ts:
  export const getBodySize :5
  const withProgress :57
  export const streamResponse :90
  export const streamRequest :119
utils/delay.ts:
  export type DelayOptions :5
  export default async function delay :9
utils/is.ts:
  export const isObject :2
utils/merge.ts:
  export const validateAndMerge :6
  export const mergeHeaders :16
  function newHookValue :32
  export const mergeHooks :38
  const appendSearchParameters :47
  export const deepMerge :86
utils/normalize.ts:
  export const normalizeRequestMethod :5
  const retryMethods :8
  const retryStatusCodes :10
  const retryAfterStatusCodes :12
  type InternalRetryOptions :14
  const defaultRetryOptions :16
  export const normalizeRetryOptions :28
utils/options.ts:
  export const findUnknownOptions :4
  export const hasSearchParameters :30
utils/timeout.ts:
  export type TimeoutOptions :3
  export default async function timeout :9
utils/type-guards.ts:
  export function isKyError :27
  export function isHTTPError :49
  export function isTimeoutError :71
  export function isForceRetryError :98
utils/types.ts:
  export type Mutable :1
  export type ObjectEntries :5
