tests/snapshots/snapshots__fixture_ky_errors_subdir.snap
---
source: tests/snapshots.rs
expression: output
---
ForceRetryError.ts
     8→export class ForceRetryError
    14→	constructor
HTTPError.ts
     5→export class HTTPError
    10→	constructor
NonError.ts
     6→export class NonError
    10→	constructor
TimeoutError.ts
     3→export class TimeoutError
     6→	constructor
