tests/snapshots/snapshots__fixture_ky_errors_subdir_level2.snap
---
source: tests/snapshots.rs
expression: output
---
ForceRetryError.ts
     8→export class ForceRetryError extends Error {
    14→	constructor(options?: ForceRetryOptions) {
HTTPError.ts
     5→export class HTTPError<T = unknown> extends Error {
    10→	constructor(response: Response, request: Request, options: NormalizedOptions) {
NonError.ts
     6→export class NonError extends Error {
    10→	constructor(value: unknown) {
TimeoutError.ts
     3→export class TimeoutError extends Error {
     6→	constructor(request: Request) {
